--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>宋城对联 AI 学习平台</title>
+    <title>Songcheng AI Couplet Studio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@500;700&family=Inter:wght@400;500;700&display=swap');
-      body {
-        font-family: 'Inter', sans-serif;
-      }
-      .font-serif {
-        font-family: 'Noto Serif SC', serif;
-      }
+        body { margin: 0; font-family: 'Segoe UI', 'Microsoft YaHei', sans-serif; }
+        /* Utility for vertical text support */
+        .writing-mode-vertical {
+            writing-mode: vertical-lr;
+            text-orientation: upright;
+        }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1"
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.32.0"
   }
 }
 </script>
 </head>
 <body class="bg-slate-100">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
